Remove Java 8 stuff